--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Vir Sanghavi's Personal Website - A showcase of my work, projects, and passions in AI, startups, and social impact. - virsanghavi.info -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -52,7 +52,7 @@
       <li>Teaching free programming workshops internationally (Indonesia, Vietnam, India, more).</li>
     </ul>
     <p><strong>Quick Stats:</strong> 4.00 GPA | 1560 SAT | 1600+ day Duolingo streak (5 languages)</p>
-    <p><strong>Currently Seeking:</strong> Mentorships and internships in AI, engineering, or social impact tech.</p>
+    <p><strong>Currently Seeking:</strong> Funding for Tilt, mentorships and internships in AI, engineering, or social impact tech.</p>
   </section>
 
   <section class="section">
