--- a/index.html
+++ b/index.html
@@ -298,9 +298,21 @@
     /* Cards */
     .cards-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 2rem;
       margin-top: 3rem;
+    }
+
+    @media (max-width: 1200px) {
+      .cards-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 768px) {
+      .cards-grid {
+        grid-template-columns: 1fr;
+      }
     }
 
     .card {
@@ -362,9 +374,27 @@
     /* Stats */
     .stats-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(5, 1fr);
       gap: 2rem;
       margin: 4rem 0;
+    }
+
+    @media (max-width: 1200px) {
+      .stats-grid {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+
+    @media (max-width: 900px) {
+      .stats-grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .stats-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
 
     .stat {
@@ -686,6 +716,18 @@
             <div class="stat-number" data-target="9000">0</div>
             <div class="stat-label">Site Interactions</div>
           </div>
+          <div class="stat">
+            <div class="stat-number" data-target="1600">0</div>
+            <div class="stat-label">Day Duolingo Streak</div>
+          </div>
+          <div class="stat">
+            <div class="stat-number" data-target="3">0</div>
+            <div class="stat-label">Continents Reached</div>
+          </div>
+          <div class="stat">
+            <div class="stat-number" data-target="6">0</div>
+            <div class="stat-label">Languages Spoken</div>
+          </div>
         </div>
 
         <div class="cards-grid">
@@ -723,6 +765,16 @@
             <div class="card-icon">🎭</div>
             <h3>Machine Learning Developer - Celebrity Face Recognition</h3>
             <p>Built browser-based celebrity face scanner using Google Teachable Machine with 30,000+ face images across 50+ celebrities. Achieved high-precision classification with live webcam input, deployed offline via TensorFlow.js.</p>
+          </div>
+          <div class="card fade-in">
+            <div class="card-icon">🌐</div>
+            <h3>Global Tech Education Leader</h3>
+            <p>International programming outreach across 3 continents. Teaching coding to underserved communities while maintaining 1600-day Duolingo streak for self-directed Spanish mastery.</p>
+          </div>
+          <div class="card fade-in">
+            <div class="card-icon">🔬</div>
+            <h3>Research & Innovation</h3>
+            <p>Published research-level projects in AI/ML including computer vision, natural language processing, and embedded systems. Building solutions for real-world accessibility and safety challenges.</p>
           </div>
         </div>
       </div>
