--- a/index.html
+++ b/index.html
@@ -702,23 +702,23 @@
           </div>
           <div class="stat">
             <div class="stat-number" data-target="100">0</div>
-            <div class="stat-label">Students Taught</div>
+            <div class="stat-label">Students Taught+</div>
           </div>
           <div class="stat">
             <div class="stat-number" data-target="15000">0</div>
-            <div class="stat-label">Website Visitors</div>
+            <div class="stat-label">Website Visitors+</div>
           </div>
           <div class="stat">
             <div class="stat-number" data-target="10">0</div>
-            <div class="stat-label">K+ Donations ($)</div>
+            <div class="stat-label">K+ Donations ($)+</div>
           </div>
           <div class="stat">
             <div class="stat-number" data-target="9000">0</div>
-            <div class="stat-label">Site Interactions</div>
+            <div class="stat-label">Site Interactions+</div>
           </div>
           <div class="stat">
             <div class="stat-number" data-target="1600">0</div>
-            <div class="stat-label">Day Duolingo Streak</div>
+            <div class="stat-label">Day Duolingo Streak+</div>
           </div>
           <div class="stat">
             <div class="stat-number" data-target="3">0</div>
