--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
 
     /* Sections */
     .section {
-      padding: 6rem 0;
+      padding: 4rem 0;
       position: relative;
     }
 
     .section-header {
       text-align: center;
-      margin-bottom: 4rem;
+      margin-bottom: 2.5rem;
     }
 
     .section-title {
@@ -299,8 +299,8 @@
     .cards-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 2rem;
-      margin-top: 3rem;
+      gap: 1.5rem;
+      margin-top: 2rem;
     }
 
     @media (max-width: 1200px) {
@@ -319,7 +319,7 @@
       background: var(--bg-card);
       border: 1px solid var(--border);
       border-radius: 16px;
-      padding: 2rem;
+      padding: 1.5rem;
       transition: all 0.3s ease;
       position: relative;
       overflow: hidden;
@@ -348,21 +348,21 @@
     }
 
     .card-icon {
-      width: 48px;
-      height: 48px;
+      width: 40px;
+      height: 40px;
       background: linear-gradient(135deg, var(--accent), var(--accent-light));
-      border-radius: 12px;
+      border-radius: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 1.5rem;
-      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      font-size: 1.25rem;
     }
 
     .card h3 {
-      font-size: 1.25rem;
+      font-size: 1.125rem;
       font-weight: 600;
-      margin-bottom: 0.875rem;
+      margin-bottom: 0.75rem;
       color: var(--text-primary);
     }
 
@@ -375,8 +375,8 @@
     .stats-grid {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 2rem;
-      margin: 4rem 0;
+      gap: 1.5rem;
+      margin: 3rem 0;
     }
 
     @media (max-width: 1200px) {
@@ -399,7 +399,7 @@
 
     .stat {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 1.5rem 0.75rem;
       background: rgba(59, 130, 246, 0.05);
       border: 1px solid rgba(59, 130, 246, 0.1);
       border-radius: 12px;
@@ -412,10 +412,10 @@
     }
 
     .stat-number {
-      font-size: 2.5rem;
+      font-size: 2rem;
       font-weight: 700;
       color: var(--accent-light);
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.25rem;
       font-family: 'JetBrains Mono', monospace;
     }
 
@@ -442,11 +442,11 @@
 
     .timeline-item {
       position: relative;
-      margin-bottom: 3rem;
+      margin-bottom: 2rem;
       background: var(--bg-card);
       border: 1px solid var(--border);
       border-radius: 12px;
-      padding: 2rem;
+      padding: 1.5rem;
       margin-left: 2rem;
       transition: all 0.3s ease;
     }
@@ -455,7 +455,7 @@
       content: '';
       position: absolute;
       left: -3rem;
-      top: 2rem;
+      top: 1.5rem;
       width: 12px;
       height: 12px;
       background: var(--accent);
@@ -479,7 +479,7 @@
       color: var(--accent-light);
       font-size: 0.875rem;
       font-weight: 500;
-      margin-bottom: 1rem;
+      margin-bottom: 0.75rem;
     }
 
     .timeline-description {
@@ -498,7 +498,7 @@
       background: var(--bg-card);
       border: 1px solid var(--border);
       border-radius: 8px;
-      padding: 1.5rem;
+      padding: 1.25rem;
       text-align: center;
       transition: all 0.3s ease;
       cursor: pointer;
@@ -540,7 +540,7 @@
       display: flex;
       align-items: center;
       gap: 1rem;
-      padding: 1.5rem;
+      padding: 1.25rem;
       background: var(--bg-card);
       border: 1px solid var(--border);
       border-radius: 12px;
@@ -569,7 +569,7 @@
     footer {
       background: var(--bg-secondary);
       border-top: 1px solid var(--border);
-      padding: 3rem 0;
+      padding: 2rem 0;
       text-align: center;
     }
 
@@ -606,32 +606,174 @@
         display: none;
       }
 
+      .hero {
+        min-height: 80vh;
+      }
+
       .hero h1 {
-        font-size: 2.5rem;
+        font-size: 2.25rem;
+        margin-bottom: 1rem;
       }
 
       .hero-subtitle {
-        font-size: 1.125rem;
+        font-size: 1.075rem;
+        margin-bottom: 1.5rem;
+      }
+
+      .hero-badge {
+        margin-bottom: 1.5rem;
+        padding: 0.375rem 0.75rem;
+        font-size: 0.8rem;
       }
 
       .section {
-        padding: 4rem 0;
+        padding: 2.5rem 0;
+      }
+
+      .section-header {
+        margin-bottom: 1.5rem;
       }
 
       .section-title {
-        font-size: 2rem;
+        font-size: 1.75rem;
+        margin-bottom: 0.75rem;
+      }
+
+      .section-subtitle {
+        font-size: 1rem;
       }
 
       .cards-grid {
         grid-template-columns: 1fr;
+        gap: 1rem;
+        margin-top: 1.5rem;
+      }
+
+      .card {
+        padding: 1.25rem;
+      }
+
+      .card h3 {
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .card p {
+        font-size: 0.9rem;
+        line-height: 1.5;
+      }
+
+      .stats-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        margin: 2rem 0;
+      }
+
+      .stat {
+        padding: 1rem 0.5rem;
+      }
+
+      .stat-number {
+        font-size: 1.5rem;
+        margin-bottom: 0.2rem;
+      }
+
+      .stat-label {
+        font-size: 0.85rem;
       }
 
       .timeline {
-        padding-left: 1rem;
+        padding-left: 0.75rem;
       }
 
       .timeline-item {
         margin-left: 1rem;
+        padding: 1.25rem;
+        margin-bottom: 1.5rem;
+      }
+
+      .timeline-item::before {
+        left: -2.25rem;
+        top: 1.25rem;
+        width: 10px;
+        height: 10px;
+      }
+
+      .timeline-title {
+        font-size: 1rem;
+      }
+
+      .timeline-description {
+        font-size: 0.9rem;
+        line-height: 1.5;
+      }
+
+      .skill-item {
+        padding: 1rem;
+      }
+
+      .skill-name {
+        font-size: 0.9rem;
+      }
+
+      .contact-grid {
+        gap: 1rem;
+      }
+
+      .contact-item {
+        padding: 1rem;
+      }
+
+      .container {
+        padding: 0 1rem;
+      }
+
+      .cta-buttons {
+        gap: 0.75rem;
+      }
+
+      .btn {
+        padding: 0.75rem 1.5rem;
+        font-size: 0.8rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .section {
+        padding: 2rem 0;
+      }
+
+      .hero {
+        min-height: 70vh;
+      }
+
+      .hero h1 {
+        font-size: 2rem;
+      }
+
+      .section-title {
+        font-size: 1.5rem;
+      }
+
+      .stats-grid {
+        grid-template-columns: 1fr;
+        gap: 0.75rem;
+      }
+
+      .stat {
+        padding: 0.75rem 0.5rem;
+      }
+
+      .stat-number {
+        font-size: 1.25rem;
+      }
+
+      .card, .timeline-item, .skill-item, .contact-item {
+        padding: 1rem;
+      }
+
+      .container {
+        padding: 0 0.75rem;
       }
     }
   </style>
@@ -891,7 +1033,7 @@
           </div>
         </div>
 
-        <div class="section-header fade-in" style="margin-top: 4rem;">
+        <div class="section-header fade-in" style="margin-top: 3rem;">
           <h3 class="section-title" style="font-size: 2rem;">Awards & Honors</h3>
         </div>
 
@@ -923,7 +1065,7 @@
           </div>
         </div>
 
-        <div class="section-header fade-in" style="margin-top: 4rem;">
+        <div class="section-header fade-in" style="margin-top: 3rem;">
           <h3 class="section-title" style="font-size: 2rem;">Technical Skills</h3>
         </div>
 
@@ -984,7 +1126,7 @@
           </div>
         </div>
 
-        <div class="section-header fade-in" style="margin-top: 4rem;">
+        <div class="section-header fade-in" style="margin-top: 3rem;">
           <h3 class="section-title" style="font-size: 2rem;">Languages</h3>
         </div>
 
