updated hero section

--- a/index.html
+++ b/index.html
@@ -805,15 +805,23 @@
           </div>
           <h1>Building the future with AI</h1>
           <p class="hero-subtitle">
-            I'm <span class="typed-text" id="typed"></span>, creating AI-powered solutions that solve real-world problems.
+            I'm <span class="typed-text" id="typed"></span>, creating AI-powered solutions that solve real-world problems. Currently scaling <strong>Tilt</strong> - the AI-powered debate platform with 100+ users across 3 continents, and leading <strong>Up the Ratios</strong> - a nonprofit bridging the STEM divide with $10K+ in donations.
           </p>
           <div class="cta-buttons">
-            <a href="#projects" class="btn btn-primary">
-              <span>View Projects</span>
+            <a href="https://tilt.vote" target="_blank" class="btn btn-primary">
+              <span>Try Tilt Live</span>
+              <span>🚀</span>
+            </a>
+            <a href="https://uptheratios.org" target="_blank" class="btn btn-secondary">
+              <span>Visit Up the Ratios</span>
+              <span>🎯</span>
+            </a>
+            <a href="#experience" class="btn btn-secondary">
+              <span>See My Story</span>
               <span>→</span>
             </a>
             <a href="#contact" class="btn btn-secondary">
-              <span>Get in Touch</span>
+              <span>Let's Connect</span>
             </a>
           </div>
         </div>
@@ -876,7 +884,7 @@
           <div class="card fade-in">
             <div class="card-icon">🚀</div>
             <h3>Founder & CEO - Tilt</h3>
-            <p>Real-time debate platform with AI-powered summaries. Built with TypeScript, React, and Supabase. 100+ users across 3 continents in closed beta.</p>
+            <p>Real-time debate platform with AI-powered summaries. Built with TypeScript, React, and Supabase. 100+ users across 3 continents in closed beta. <a href="https://tilt.vote" target="_blank" style="color: var(--accent-light); text-decoration: none; font-weight: 600;">Try it live →</a></p>
           </div>
           <div class="card fade-in">
             <div class="card-icon">📈</div>
@@ -1176,7 +1184,7 @@
         <div class="section-header fade-in">
           <h2 class="section-title">Let's Connect</h2>
           <p class="section-subtitle">
-            Currently seeking funding for Tilt, mentorships, and internships in AI, engineering, or social impact tech.
+            Seeking funding for Tilt, YC application partnerships, and mentorship from experienced founders. Ready to scale AI-powered discourse globally.
           </p>
         </div>
 
