--- a/index.html
+++ b/index.html
@@ -805,25 +805,8 @@
           </div>
           <h1>Building the future with AI</h1>
           <p class="hero-subtitle">
-            I'm <span class="typed-text" id="typed"></span>, creating AI-powered solutions that solve real-world problems. Currently scaling <strong>Tilt</strong> - the AI-powered debate platform with 100+ users across 3 continents, and leading <strong>Up the Ratios</strong> - a nonprofit bridging the STEM divide with $10K+ in donations.
+            I'm <span class="typed-text" id="typed"></span>, creating AI-powered solutions that solve real-world problems. Currently scaling <a href="#tilt-experience" style="color: var(--accent-light); text-decoration: none; font-weight: 700; border-bottom: 2px solid var(--accent-light); transition: all 0.3s ease;">Tilt</a> - the AI-powered debate platform with 100+ users across 3 continents, and leading <a href="#uptheratios-experience" style="color: var(--accent-light); text-decoration: none; font-weight: 700; border-bottom: 2px solid var(--accent-light); transition: all 0.3s ease;">Up the Ratios</a> - a nonprofit bridging the STEM divide with $10K+ in donations.
           </p>
-          <div class="cta-buttons">
-            <a href="https://tilt.vote" target="_blank" class="btn btn-primary">
-              <span>Try Tilt Live</span>
-              <span>🚀</span>
-            </a>
-            <a href="https://uptheratios.org" target="_blank" class="btn btn-secondary">
-              <span>Visit Up the Ratios</span>
-              <span>🎯</span>
-            </a>
-            <a href="#experience" class="btn btn-secondary">
-              <span>See My Story</span>
-              <span>→</span>
-            </a>
-            <a href="#contact" class="btn btn-secondary">
-              <span>Let's Connect</span>
-            </a>
-          </div>
         </div>
       </div>
     </section>
@@ -940,19 +923,31 @@
         </div>
 
         <div class="timeline fade-in">
-          <div class="timeline-item">
+          <div class="timeline-item" id="tilt-experience">
             <div class="timeline-title">Founder & CEO - Tilt</div>
             <div class="timeline-period">2025 - Present</div>
             <div class="timeline-description">
               Founded real-time debate platform with TypeScript, React, and Supabase. Implemented AI-powered summaries, logic-based voting, and friend-only modes. Scaled to 100+ users across 3 continents with 9,000+ interactions in pre-launch. Preparing for pre-seed fundraising.
             </div>
+            <div style="margin-top: 1rem;">
+              <a href="https://tilt.vote" target="_blank" class="btn btn-primary" style="font-size: 0.8rem; padding: 0.5rem 1rem;">
+                <span>Try Tilt Live</span>
+                <span>🚀</span>
+              </a>
+            </div>
           </div>
 
-          <div class="timeline-item">
+          <div class="timeline-item" id="uptheratios-experience">
             <div class="timeline-title">Executive Director - Up the Ratios</div>
             <div class="timeline-period">2024 - Present</div>
             <div class="timeline-description">
               Founded nonprofit increasing STEM access for underprivileged students. Secured $10K+ in donations, partnered with 10+ schools across 3 districts. Taught coding to 100+ students in India. Built SEO-optimized website drawing 15K+ annual visitors.
+            </div>
+            <div style="margin-top: 1rem;">
+              <a href="https://uptheratios.org" target="_blank" class="btn btn-secondary" style="font-size: 0.8rem; padding: 0.5rem 1rem;">
+                <span>Visit Up the Ratios</span>
+                <span>🎯</span>
+              </a>
             </div>
           </div>
 
