--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <meta property="og:description" content="Building the future with AI. Founder of Tilt and Up the Ratios." />
   <meta property="og:image" content="https://virsanghavi.info/og-image.jpg" />
   <meta property="og:url" content="https://virsanghavi.info" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <style>
     :root {
       --primary: #0f172a;
