--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <meta property="og:description" content="Building the future with AI. Founder of Tilt and Up the Ratios." />
   <meta property="og:image" content="https://virsanghavi.info/og-image.jpg" />
   <meta property="og:url" content="https://virsanghavi.info" />
-  <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-  <link rel="apple-touch-icon" href="./favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico?v=2" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico?v=2" />
   <style>
     :root {
       --primary: #0f172a;
