site: update metrics + Tilt status (2k users, 6 continents, public beta, raising pre-seed); visitors 90k, interactions 50k; continents reached 6; mobile polish retained

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
           </div>
           <h1>Building the future with AI</h1>
           <p class="hero-subtitle">
-            I'm <span class="typed-text" id="typed"></span>, creating AI-powered solutions that solve real-world problems. Currently scaling <a href="#tilt-experience" style="color: var(--accent-light); text-decoration: none; font-weight: 700; border-bottom: 2px solid var(--accent-light); transition: all 0.3s ease;">Tilt</a> - the AI-powered debate platform with 2000+ users across 3 continents, and leading <a href="#uptheratios-experience" style="color: var(--accent-light); text-decoration: none; font-weight: 700; border-bottom: 2px solid var(--accent-light); transition: all 0.3s ease;">Up the Ratios</a> - a nonprofit bridging the STEM divide with $10K+ in donations.
+            I'm <span class="typed-text" id="typed"></span>, creating AI-powered solutions that solve real-world problems. Currently scaling <a href="#tilt-experience" style="color: var(--accent-light); text-decoration: none; font-weight: 700; border-bottom: 2px solid var(--accent-light); transition: all 0.3s ease;">Tilt</a> — the AI-powered debate platform with 2,000+ users across 6 continents, now in public beta and raising a pre-seed — and leading <a href="#uptheratios-experience" style="color: var(--accent-light); text-decoration: none; font-weight: 700; border-bottom: 2px solid var(--accent-light); transition: all 0.3s ease;">Up the Ratios</a> — a nonprofit bridging the STEM divide with $10K+ in donations.
           </p>
         </div>
       </div>
@@ -838,11 +838,11 @@
             <div class="stat-label">AP Exams Taken</div>
           </div>
           <div class="stat">
-            <div class="stat-number" data-target="100" data-suffix="+">0</div>
+            <div class="stat-number" data-target="90000" data-suffix="+">0</div>
             <div class="stat-label">Students Taught</div>
           </div>
           <div class="stat">
-            <div class="stat-number" data-target="15000" data-suffix="+">0</div>
+            <div class="stat-number" data-target="50000" data-suffix="+">0</div>
             <div class="stat-label">Website Visitors</div>
           </div>
           <div class="stat">
@@ -858,7 +858,7 @@
             <div class="stat-label">Day Duolingo Streak</div>
           </div>
           <div class="stat">
-            <div class="stat-number" data-target="3">0</div>
+            <div class="stat-number" data-target="6">0</div>
             <div class="stat-label">Continents Reached</div>
           </div>
           <div class="stat">
@@ -871,7 +871,7 @@
           <div class="card fade-in">
             <div class="card-icon">🚀</div>
             <h3>Founder & CEO - Tilt</h3>
-            <p>Real-time debate platform with AI-powered summaries. Built with TypeScript, React, and Supabase. 100+ users across 3 continents in closed beta. <a href="https://tilt.vote" target="_blank" style="color: var(--accent-light); text-decoration: none; font-weight: 600;">Try it live →</a></p>
+            <p>Real-time debate platform with AI-powered summaries. Built with TypeScript, React, and Supabase. 2,000+ users across 6 continents in public beta. <a href="https://tilt.vote" target="_blank" style="color: var(--accent-light); text-decoration: none; font-weight: 600;">Try it live →</a></p>
           </div>
           <div class="card fade-in">
             <div class="card-icon">📈</div>
@@ -906,7 +906,7 @@
           <div class="card fade-in">
             <div class="card-icon">🌐</div>
             <h3>Global Tech Education Leader</h3>
-            <p>International programming outreach across 3 continents. Teaching coding to underserved communities while maintaining 1600-day Duolingo streak for self-directed Spanish mastery.</p>
+            <p>International programming outreach across 6 continents. Teaching coding to underserved communities while maintaining 1600-day Duolingo streak for self-directed Spanish mastery.</p>
           </div>
           <div class="card fade-in">
             <div class="card-icon">🔬</div>
@@ -931,7 +931,7 @@
             <div class="timeline-title">Founder & CEO - Tilt</div>
             <div class="timeline-period">2025 - Present</div>
             <div class="timeline-description">
-              Founded real-time debate platform with TypeScript, React, and Supabase. Implemented AI-powered summaries, logic-based voting, and friend-only modes. Scaled to 100+ users across 3 continents with 9,000+ interactions in pre-launch. Preparing for pre-seed fundraising.
+              Founded real-time debate platform with TypeScript, React, and Supabase. Implemented AI-powered summaries, logic-based voting, and friend-only modes. Scaled to 2,000+ users across 6 continents with 50,000+ interactions; launched public beta and currently raising a pre-seed round.
             </div>
             <div style="margin-top: 1rem;">
               <a href="https://tilt.vote" target="_blank" class="btn btn-primary" style="font-size: 0.8rem; padding: 0.5rem 1rem;">
